[bug] ensured compatibility with Java 1.3